Fixed some typos

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 
                 <h5>Example Freqtrade Strategy</h5>
                 <p>
-                    Let's take a look at what a simple Freqtrade strategy looks like. In the image above, you can see the code for a minimal strategy. For background information, Freqtrade uses <a href="https://pandas.pydata.org/" target="_blank" rel="noopener noreferrer">pandas</a> to store and provide the candlestick data. Pandas is a great library developed for processing large amounts of data in tabular format. Each row in a dataframe corresponds to one candle on a chart and is made up of a six values: date, open, high, low, close and volume. The latest complete candle is always the last in the dataframe.
+                    Let us take a look at what a simple Freqtrade strategy looks like. In the image above, you can see the code for a minimal strategy. For background information, Freqtrade uses <a href="https://pandas.pydata.org/" target="_blank" rel="noopener noreferrer">pandas</a> to store and provide the candlestick data. Pandas is a great library developed for processing large amounts of data in tabular format. Each row in a dataframe corresponds to one candle on a chart and is made up of a six values: date, open, high, low, close and volume. The latest complete candle is always the last in the dataframe.
                 </p>
 
                 <p>
@@ -667,7 +667,7 @@
                 </blockquote>
 
                 <p>
-                    I was intrigued by the project so I joined their Discord server and quickly became a contributor to the project. Members of the community ranged from normal gamers to people learning to code as well as some experienced software engineers. We were a group of complete strangers but yet we came together to solve a common problem we all had - <u><em>how to purchase a PS5.</em></u> 
+                    I was intrigued by the project so I joined their Discord server and quickly became a contributor to the project. Members of the community ranged from normal gamers to people learning to code as well as some experienced software engineers. We were a group of complete strangers but yet we came together to solve a common problem we all had - <em>how to purchase a PS5</em>. 
                 </p>
 
 
@@ -701,7 +701,7 @@
                 </p>
 
                 <p>
-                    On nights and weekends, I was dedicated to working on the bot. We had to make the bot fast, we had to make it reliable, we had to make it efficient, and most importantly, <u><em>we had to make it work.</em></u>  
+                    On nights and weekends, I was dedicated to working on the bot. We had to make the bot fast, we had to make it reliable, we had to make it efficient, and most importantly, <b><em>we had to make it work</em></b>.  
                 </p>
 
                 <p>
@@ -811,15 +811,15 @@
                 <h2>Research Project: Search + Seizure</h2>
 
                 <p>
-                    During the summer after my first year at UCSD, I worked with a PhD student named <a href="https://www.linkedin.com/in/davidywang/" target="_blank" rel="noopener noreferrer">David Wang</a> and helped contribute to his research project. David was studying Black Hats (a term for malicious hackers) who were abusively manipulating search engine results to steer people towards fradulent websites that sold counterfeit luxury goods (e.g. Louis Vuitton, Gucci, Versace, etc.). During his research, he identified 52 distinct search engine optimization (SEO) campaigns that were selling fake products of sixteen different luxury brands.
+                    During the summer after my first year at UCSD, I worked with a PhD student named <a href="https://www.linkedin.com/in/davidywang/" target="_blank" rel="noopener noreferrer">David Wang</a> and helped contribute to his research project. David was studying Black Hats (a term for malicious hackers) who were abusively manipulating search engine results to steer people towards fraudulent websites that sold counterfeit luxury goods (e.g. Louis Vuitton, Gucci, Versace, etc.). During his research, he identified 52 distinct search engine optimization (SEO) campaigns that were selling fake products of sixteen different luxury brands.
                 </p>
 
                 <p>
-                    David created a web crawler to find these fradulent websites and used it to keep a list of all the sites he found. He tasked me with the goal of developing a software program to document and collect information about these nefarious websites.
+                    David created a web crawler to find these fraudulent websites and used it to keep a list of all the sites he found. He tasked me with the goal of developing a software program to document and collect information about these nefarious websites.
                 </p>
 
                 <p>
-                    There were two mains reasons why David wanted me to collect information on these websites. First, to collect the order number when checking out a product in order to estimate their order volume. If the websites simply incremented their order numbers by 1 for each order, then we could use the order number to estimate their order volume over time and see how much business these websites were taking from the legitimate websites. Second, he wanted me to download the source files of the checkout pages in order to see which payment service providers these websites were using. This information could be used to report and disrupt the business of these fradulent websites.
+                    There were two mains reasons why David wanted me to collect information on these websites. First, to collect the order number when checking out a product in order to estimate their order volume. If the websites simply incremented their order numbers by 1 for each order, then we could use the order number to estimate their order volume over time and see how much business these websites were taking from the legitimate websites. Second, he wanted me to download the source files of the checkout pages in order to see which payment service providers these websites were using. This information could be used to report and disrupt the business of these fraudulent websites.
                 </p>
 
                 <h5>Main Development Tasks:</h5>
@@ -853,7 +853,7 @@
                 </p>
 
                 <p>
-                    The professors I worked with and David were very pleased with the results of my work. They especially liked the fact that the program could take screenshots of all of these fradulent websites. This was a great experience for me because I was able to learn how a lot about web scraping and automation. The main technologies I used were JavaScript, CasperJS, Python, and cron jobs.
+                    The professors I worked with and David were very pleased with the results of my work. They especially liked the fact that the program could take screenshots of all of these fraudulent websites. This was a great experience for me because I was able to learn how a lot about web scraping and automation. The main technologies I used were JavaScript, CasperJS, Python, and cron jobs.
                 </p>
 
 
@@ -942,7 +942,7 @@
 
                 <h5>Network Signatures:</h5>
                 <p>
-                    What is a network signature? A network signature is a unique pattern or characteristic of network traffic that can be used to identify specific types of behavior or activity. Network signatures can be used to detect malicious activity, for instance malware infections. They can also be used to identify normal user behavior such as browsing YouTube, listenting to music on Spotify, or checking emails.
+                    What is a network signature? A network signature is a unique pattern or characteristic of network traffic that can be used to identify specific types of behavior or activity. Network signatures can be used to detect malicious activity, for instance malware infections. They can also be used to identify normal user behavior such as browsing YouTube, listening to music on Spotify, or checking emails.
                 </p>
 
                 <p>
