--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
                 </p>
 
                 <p>
-                    After creating our own set of network signatures, we then wrote Bro scripts to implement our network signatures. The Bro scripts would analyze the network traffic monitored by Bro and apply our network signatures to identify and log the specific user behavior we were interested in. This allowed us to automate the process of identifying user behavior based on their network traffic.
+                    After creating our own set of network signatures, we then wrote Bro scripts to implement our network signatures. The Bro scripts would analyze the network traffic monitored by Bro and apply our network signatures to identify and log the specific user behavior we were interested in. This allowed us to automate the process of identifying user activity based on their network traffic.
                 </p>
 
                 <h5>Testing:</h5>
@@ -965,7 +965,7 @@
 
                 <h5>Conclusion/Results:</h5>
                 <p>
-                     For the final phase of our research project, we had Louis record 48 hours of real network traffic from the UCSD Computer Science and Engineering department's network. This resulted in a vast amount of network traffic to analyze. We then ran our Bro scripts on the recorded network traffic to identify user behavior. The results were promising as our network signatures were able to accurately identify a wide range of user behavior. 
+                     For the final phase of our research project, we had Louis record 48 hours of real network traffic from the UCSD Computer Science and Engineering department's network. This resulted in a vast amount of network traffic to analyze. We then ran our Bro scripts on the recorded network traffic to identify user network activity. The results were promising as our network signatures were indeed able to accurately identify a wide range of user behavior. 
                 </p>
 
                 <p>
