Added the ability to click on some headers and have the link to that section copied to your clipboard

--- a/index.html
+++ b/index.html
@@ -381,7 +381,10 @@
             <div class="container">
                 <h1 class="long-header">Personal Projects</h1>
 
-                <h2>Cryptocurrency Trading Bot</h2>
+                <h2 id="crypto_trading_bot" class="header-link" onclick="copyLinkToClipboard(event, 'crypto_trading_bot')">
+                    Cryptocurrency Trading Bot
+                    <span class="link-icon">🔗</span>
+                </h2>
 
                 <h5>Overview:</h5>
                 <p>
@@ -597,7 +600,11 @@
                 <div class="section-divider"></div>
 
 
-                <h2>PS5 Purchasing Bot</h2>
+                <h2 id="ps5_purchasing_bot" class="header-link" onclick="copyLinkToClipboard(event, 'ps5_purchasing_bot')">
+                    PS5 Purchasing Bot
+                    <span class="link-icon">🔗</span>
+                </h2>
+
 
                 <h5>Overview:</h5>
                 <p>
@@ -749,7 +756,11 @@
                 <div class="section-divider"></div>
 
 
-                <h2>This Website</h2>
+                <h2 id="this_website" class="header-link" onclick="copyLinkToClipboard(event, 'this_website')">
+                    This Website
+                    <span class="link-icon">🔗</span>
+                </h2>
+
 
                 <p>
                     This website was created by me to showcase my experience, projects, and website/visual design skills. I wrote all of the code for this website myself from scratch (HTML, CSS, and JavaScript). I chose the design, layout, typography, and colors of the website. I did not use any pre-made templates, themes, or frameworks.
@@ -783,6 +794,9 @@
                         Some of the images on the website have built in links that will take you to relevant information when clicked on. If you click on the image below it will take you to the GitHub repository for this website.
                     </li>
                     <li>
+                        If you click on one of the headers in the Projects section (e.g. "Cryptocurrency Trading Bot"), it will copy the link to that section to your clipboard. This is useful if you want to share a specific project with someone.
+                    </li>
+                    <li>
                         Note: some of these features are disabled for mobile devices due to mobile browser limitations.
                     </li>
                 </ul>
@@ -808,7 +822,12 @@
 
                 <h1 class="long-header">Undergraduate Projects</h1>
 
-                <h2>Research Project: Search + Seizure</h2>
+
+                <h2 id="research_project_search_and_seizure" class="header-link" onclick="copyLinkToClipboard(event, 'research_project_search_and_seizure')">
+                    Research Project: Search + Seizure
+                    <span class="link-icon">🔗</span>
+                </h2>
+
 
                 <p>
                     During the summer after my first year at UCSD, I worked with a PhD student named <a href="https://www.linkedin.com/in/davidywang/" target="_blank" rel="noopener noreferrer">David Wang</a> and helped contribute to his research project. David was studying Black Hats (a term for malicious hackers) who were abusively manipulating search engine results to steer people towards fraudulent websites that sold counterfeit luxury goods (e.g. Louis Vuitton, Gucci, Versace, etc.). During his research, he identified 52 distinct search engine optimization (SEO) campaigns that were selling fake products of sixteen different luxury brands.
@@ -874,7 +893,11 @@
                 <div class="section-divider"></div>
 
 
-                <h2>Research Project: Network Traffic Analysis</h2>
+                <h2 id="research_project_network_traffic_analysis" class="header-link" onclick="copyLinkToClipboard(event, 'research_project_network_traffic_analysis')">
+                    Research Project: Network Traffic Analysis
+                    <span class="link-icon">🔗</span>
+                </h2>
+
 
                 <h5>Overview:</h5>
                 <p>
