Added more clickable headers

--- a/index.html
+++ b/index.html
@@ -192,8 +192,13 @@
 
         <section class="experience" id="experience">
             <div class="container">
+
                 <h1 class="long-header">Professional Experience</h1>
-                <h2>Centene Corporation</h2>
+
+                <h2 id="centene" class="header-link" onclick="copyLinkToClipboard(event, 'centene')">
+                    Centene Corporation
+                    <span class="link-icon">🔗</span>
+                </h2>
 
                 <div class="heading-container">
                     <h3>Position: Senior Software Engineer</h3>
@@ -317,7 +322,10 @@
                 <div class="section-divider"></div>
 
 
-                <h2>Epsilon Systems Solutions, Inc.</h2>
+                <h2 id="epsilon_systems" class="header-link" onclick="copyLinkToClipboard(event, 'epsilon_systems')">
+                    Epsilon Systems Solutions, Inc.
+                    <span class="link-icon">🔗</span>
+                </h2>
 
                 <div class="heading-container">
                     <h3>Position: Software Engineer</h3>
@@ -794,7 +802,7 @@
                         Some of the images on the website have built in links that will take you to relevant information when clicked on. If you click on the image below it will take you to the GitHub repository for this website.
                     </li>
                     <li>
-                        If you click on one of the headers in the Projects section (e.g. "Cryptocurrency Trading Bot"), it will copy the link to that section to your clipboard. This is useful if you want to share a specific project with someone.
+                        If you click on one of the headers in the Experience section or Projects section (e.g. "Centene Corporation" or "Cryptocurrency Trading Bot"), it will copy the link to that section to your clipboard. This is useful if you want to share a specific section with someone.
                     </li>
                     <li>
                         Note: some of these features are disabled for mobile devices due to mobile browser limitations.
