--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body>
     <header>
         <nav class="topbar">
+
             <ul class="nav-links left">
                 <li>
                     <a href="#">
@@ -53,6 +54,7 @@
                     </a>
                 </li>
             </ul> 
+
             <div class="progress-container">
                 <div class="progress-bar" id="progressBar"></div>
             </div>
@@ -75,11 +77,15 @@
     <main>
         <section class="about_me" id="about_me">
             <div class="container">
+
                 <h1>Welcome</h1>
+
                 <h2>About Me</h2>
+
                 <p>
                    Hello! My name is Aaron Hurtado. Scroll down to read and learn more about me! 
                 </p>
+
                 <p>
                    I am a Software Engineer with over 5 years of experience in building and optimizing large-scale systems, including a healthcare analytics engine serving 10 million daily users and a U.S. Navy combat defense system. I am an expert in multiple programming languages, including C++, Python, Java, and cloud technologies like AWS, with a track record of automating processes and enhancing system performance. I am passionate about tackling complex challenges, demonstrated through personal projects such as my cryptocurrency trading bot (which you can read more about in the Projects section of this website). I am eager to apply my technical expertise and problem-solving skills to deliver impactful solutions to meaningful future projects.
                 </p>
@@ -144,7 +150,9 @@
 
         <section class="education" id="education">
             <div class="container">
+
                 <h1>Education</h1>
+
                 <h2 id="UCSD-header">University of California, San Diego</h2>
 
                 <div class="image-container" id="UCSD-pics">
@@ -345,7 +353,7 @@
                 </p>
 
 
-                <h5>What is <a href="https://en.wikipedia.org/wiki/Ship_Self-Defense_System" target="_blank" rel="noopener noreferrer">SSDS?</a></h5>
+                <h5>What is <a href="https://en.wikipedia.org/wiki/Ship_Self-Defense_System" target="_blank" rel="noopener noreferrer">SSDS</a>?</h5>
                 <p>
                     SSDS is the command and control system aboard amphibious ships and aircraft carriers. The Ship Self-Defense System (SSDS) is a combat system specifically designed for anti-air defense of aircraft carriers. Navy commanders depend on SSDS to effectively integrate their ship’s sensors and weapon systems to enable the timely engagement of a diverse spectrum of hostile air threats to their ship.
                 </p>
@@ -387,6 +395,7 @@
 
         <section class="projects" id="projects">
             <div class="container">
+                
                 <h1 class="long-header">Personal Projects</h1>
 
                 <h2 id="crypto_trading_bot" class="header-link" onclick="copyLinkToClipboard(event, 'crypto_trading_bot')">
@@ -421,7 +430,7 @@
                     <img src="./images/stock_chart.webp" alt="Stock Chart" onclick="openFullscreen(this)" class="clickable-image">
                 </div>
 
-                <h5>What is <a href="https://www.investopedia.com/terms/t/technicalanalysis.asp" target="_blank" rel="noopener noreferrer">Technical Analysis?</a></h5>
+                <h5>What is <a href="https://www.investopedia.com/terms/t/technicalanalysis.asp" target="_blank" rel="noopener noreferrer">Technical Analysis</a>?</h5>
 
                 <p>
                     When it comes to stock market trading and investing there are two main schools of thought: Fundamental Analysis and Technical Analysis. Fundamental Analysis is the study of a company's financial statements, earnings, and other metrics to determine the fair value of their stock. This is the chief investing principle used by Warren Buffett and Charlie Munger. Fundamental analysts search for stocks trading at prices higher or lower than their real value. 
@@ -830,12 +839,10 @@
 
                 <h1 class="long-header">Undergraduate Projects</h1>
 
-
                 <h2 id="research_project_search_and_seizure" class="header-link" onclick="copyLinkToClipboard(event, 'research_project_search_and_seizure')">
                     Research Project: Search + Seizure
                     <span class="link-icon">🔗</span>
                 </h2>
-
 
                 <p>
                     During the summer after my first year at UCSD, I worked with a PhD student named <a href="https://www.linkedin.com/in/davidywang/" target="_blank" rel="noopener noreferrer">David Wang</a> and helped contribute to his research project. David was studying Black Hats (a term for malicious hackers) who were abusively manipulating search engine results to steer people towards fraudulent websites that sold counterfeit luxury goods (e.g. Louis Vuitton, Gucci, Versace, etc.). During his research, he identified 52 distinct search engine optimization (SEO) campaigns that were selling fake products of sixteen different luxury brands.
@@ -905,7 +912,6 @@
                     Research Project: Network Traffic Analysis
                     <span class="link-icon">🔗</span>
                 </h2>
-
 
                 <h5>Overview:</h5>
                 <p>
