Added a Table of Contents

--- a/index.html
+++ b/index.html
@@ -90,55 +90,90 @@
                    I am a Software Engineer with over 5 years of experience in building and optimizing large-scale systems, including a healthcare analytics engine serving 10 million daily users and a U.S. Navy combat defense system. I am an expert in multiple programming languages, including C++, Python, Java, and cloud technologies like AWS, with a track record of automating processes and enhancing system performance. I am passionate about tackling complex challenges, demonstrated through personal projects such as my cryptocurrency trading bot (which you can read more about in the Projects section of this website). I am eager to apply my technical expertise and problem-solving skills to deliver impactful solutions to meaningful future projects.
                 </p>
 
+
                 <div class="section-divider"></div>
 
-                <div class="text-container large-gap">
-                    <h2>Technical Skills</h2>
-                    <div class="tech_skills">
-                        <ul>
-                            <li>
-                                <h4>Programming Languages:</h4>
-                                Java, C, C++, Python, C#, JavaScript, Bash, YAML, OCaml, SPARC Assembly, Bro (Zeek)
-                            </li>
-                            <li>
-                                <h4>Frontend:</h4>
-                                React, HTML, CSS
-                            </li>
-                            <li>
-                                <h4>Backend:</h4>
-                                Node.js, Django
-                            </li>
-                            <li>
-                                <h4>Cloud Platforms:</h4>
-                                AWS, Heroku
-                            </li>
-                            <li>
-                                <h4>Databases:</h4>
-                                SQL, NoSQL, MongoDB, PostgreSQL, Redis, SQLite, MySQL
-                            </li>
-                            <li>
-                                <h4>DevOps & CI/CD:</h4>
-                                Git, Docker, Gitlab, Github, Jenkins, Bitbucket
-                            </li>
-                            <li>
-                                <h4>Testing & Debugging:</h4>
-                                Junit, Selenium, Pytest, Valgrind, GDB
-                            </li>
-                            <li>
-                                <h4>Project Management:</h4>
-                                Jira, Confluence, Trello, Agile, SCRUM, Kanban
-                            </li>
-                            <li>
-                                <h4>Platforms:</h4>
-                                Linux, Windows, macOS
-                            </li>
-                            <li>
-                                <h4>Software/Development Tools:</h4>
-                                Ninja, Clang, Maven, Apache Ant, Makefiles, Vim, Virtual Machines, WireShark, PhantomJS, LaTeX, Microsoft Office (Word, Excel, PowerPoint), UML, Visual Studio Code, Eclipse, VirtualBox, VMware, Cursor
-                            </li>
-                        </ul>
-                    </div>
+
+                <h2>Table of Contents</h2>
+
+                <div class="toc-container">
+                    <ol>
+                        <li><a href="#about_me">About Me</a></li>
+                        <li><a href="#education">Education</a></li>
+                        <li><a href="#experience">
+                            Experience
+                            <ul>
+                                <li><a href="#centene">Centene</a></li>
+                                <li><a href="#epsilon_systems">Epsilon Systems Solutions, Inc.</a></li>
+                            </ul>
+                        </a></li>
+                        <li><a href="#projects">
+                            Projects
+                            <ul>
+                                <li><a href="#crypto_trading_bot">Cryptocurrency Trading Bot</a></li>
+                                <li><a href="#ps5_purchasing_bot">PS5 Purchasing Bot</a></li>
+                                <li><a href="#this_website">This Website</a></li>
+                                <li><a href="#research_project_search_and_seizure">Research Project: Search + Seizure</a></li>
+                                <li><a href="#research_project_network_traffic_analysis">Research Project: Network Traffic Analysis</a></li>
+                            </ul>
+                        </a></li>
+                        <li><a href="#footer">Contact</a></li>
+                    </ol>
                 </div>
+
+
+                <div class="section-divider"></div>
+
+
+                <h2>Technical Skills</h2>
+
+                <div class="tech_skills">
+                    <ul>
+                        <li>
+                            <h4>Programming Languages:</h4>
+                            Java, C, C++, Python, C#, JavaScript, Bash, YAML, OCaml, SPARC Assembly, Bro (Zeek)
+                        </li>
+                        <li>
+                            <h4>Frontend:</h4>
+                            React, HTML, CSS
+                        </li>
+                        <li>
+                            <h4>Backend:</h4>
+                            Node.js, Django
+                        </li>
+                        <li>
+                            <h4>Cloud Platforms:</h4>
+                            AWS, Heroku
+                        </li>
+                        <li>
+                            <h4>Databases:</h4>
+                            SQL, NoSQL, MongoDB, PostgreSQL, Redis, SQLite, MySQL
+                        </li>
+                        <li>
+                            <h4>DevOps & CI/CD:</h4>
+                            Git, Docker, Gitlab, Github, Jenkins, Bitbucket
+                        </li>
+                        <li>
+                            <h4>Testing & Debugging:</h4>
+                            Junit, Selenium, Pytest, Valgrind, GDB
+                        </li>
+                        <li>
+                            <h4>Project Management:</h4>
+                            Jira, Confluence, Trello, Agile, SCRUM, Kanban
+                        </li>
+                        <li>
+                            <h4>Platforms:</h4>
+                            Linux, Windows, macOS
+                        </li>
+                        <li>
+                            <h4>Software/Development Tools:</h4>
+                            Ninja, Clang, Maven, Apache Ant, Makefiles, Vim, Virtual Machines, WireShark, PhantomJS, LaTeX, Microsoft Office (Word, Excel, PowerPoint), UML, Visual Studio Code, Eclipse, VirtualBox, VMware, Cursor
+                        </li>
+                    </ul>
+                </div>
+
+                
+                <div class="text-container xl-gap"> </div>
 
 
                 <div class="image-container">
