--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <div class="text-container xl-gap">
                     <p>
                         From the fall of 2013 to the spring of 2017 I attended the University of California, San Diego where I
-                        learned to program and the marvelous art of Software Engineering. 
+                        learned to program and the art of Software Engineering. 
                     </p>
                     <p>
                         During my time at UCSD, I learned everything from object-oriented programming and software design patterns to data structures and algorithms. I did the majority of my class work in Java, C++, and Python which are my main languages. During my time as a student I also worked as a tutor for the UCSD CSE department for several quarters. I tutored both lower and upper division data structure courses.
