--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="rgb(35, 39, 47)">
 
+    <meta name="google-site-verification" content="CfzffrMvebTwHtxsjG88LFqpnLldm0LLwFQTeiA2Lnc"/>
+
     <title>Aaron Hurtado's Website</title>
 
     <link rel="icon" type="image/png" href="./images/favicon1.png">
